Fix page overflow

--- a/scss/grayscale.scss
+++ b/scss/grayscale.scss
@@ -488,6 +488,6 @@ img::-moz-selection {
 }
 
 .carousel-wrapper {
-  width: 100vw;
+  // width: 100vw;
   height: 100;
 }
